--- a/public/css/app.css
+++ b/public/css/app.css
@@ -590,6 +590,8 @@ video {
   width: 1rem;
 }.w-6 {
   width: 1.5rem;
+}.w-1\/4 {
+  width: 25%;
 }.max-w-6xl {
   max-width: 72rem;
 }.max-w-xl {
@@ -658,6 +660,8 @@ video {
   border-bottom-right-radius: 0.375rem;
 }.border {
   border-width: 1px;
+}.border-2 {
+  border-width: 2px;
 }.border-t {
   border-top-width: 1px;
 }.border-r {
